tests/toylang/neg/001539_mutation.toylang
program a = { var var a : bool : bool; } .
